--- a/config/config.sentence-level.properties
+++ b/config/config.sentence-level.properties
@@ -12,6 +12,8 @@ output								= output/test
 input 								= input/test
 resourcesPath 							= ./lang_resources
 featureConfig 						= config/features/features_blackbox_17.xml
+! added featureConfig: 
+featureConfig = config/features/features_complex_words.xml
 !featureConfig                                           = config/features/features_doc-level_all.xml
 
 ! please use utf8 version of the tree-tagger scripts AND 
@@ -25,6 +27,8 @@ source.truecase.model                                  	= ./lang_resources/engli
 source.postagger					= /export/tools/tree-tagger/cmd/tree-tagger-english
 source.ngram                                                   = ./lang_resources/english/english_ngram.ngram.clean
 source.tokenizer.lang                                   = en
+! added source for list_simple_words : 
+source.simplewords = ./lang_resources/english/list_simple_words
 
 ! Resources for target:
 target.postagger					= /export/tools/tree-tagger/cmd/tree-tagger-spanish
