adding a new dataset

--- a/config/config.sentence-level.properties
+++ b/config/config.sentence-level.properties
@@ -13,7 +13,7 @@ input 								= input/test
 resourcesPath 							= ./lang_resources
 featureConfig 						= config/features/features_blackbox_17.xml
 ! added featureConfig: 
-featureConfig = config/features/features_complex_words.xml
+# featureConfig = config/features/features_complex_words.xml
 !featureConfig                                           = config/features/features_doc-level_all.xml
 
 ! please use utf8 version of the tree-tagger scripts AND 
