data processing fill_na

--- a/learning/config/svr.cfg
+++ b/learning/config/svr.cfg
@@ -2,11 +2,15 @@
 # Please note that the indentation used is 4 spaces.
 
 # input
-x_train: data/features/wmt2012_qe_baseline/training.qe.baseline.tsv 
-y_train: data/features/wmt2012_qe_baseline/training.effort
-x_test: data/features/wmt2012_qe_baseline/test.qe.baseline.tsv
-y_test: data/features/wmt2012_qe_baseline/test.effort
+# x_train: data/features/wmt2012_qe_baseline/training.qe.baseline.tsv 
+# y_train: data/features/wmt2012_qe_baseline/training.effort
+# x_test: data/features/wmt2012_qe_baseline/test.qe.baseline.tsv
+# y_test: data/features/wmt2012_qe_baseline/test.effort
 
+x_train: data/features/dataset/training.qe.tsv 
+y_train: data/features/dataset/training.effort
+x_test: data/features/dataset/test.qe.tsv
+y_test: data/features/dataset/test.effort
 
 scale: true
 separator: "\t"
