--- a/learning/config/svr.cfg
+++ b/learning/config/svr.cfg
@@ -7,9 +7,9 @@
 # x_test: data/features/wmt2012_qe_baseline/test.qe.baseline.tsv
 # y_test: data/features/wmt2012_qe_baseline/test.effort
 
-x_train: data/features/dataset/training.qe.tsv 
+x_train: data/features/dataset/training.qe.nona.tsv 
 y_train: data/features/dataset/training.effort
-x_test: data/features/dataset/test.qe.tsv
+x_test: data/features/dataset/test.qe.nona.tsv
 y_test: data/features/dataset/test.effort
 
 scale: true
