adding preprocessing using kenlm

--- a/learning/config/crf.cfg
+++ b/learning/config/crf.cfg
@@ -2,10 +2,11 @@
 # Please note that the indentation used is 4 spaces.
 
 # Input:
-x_train: ../data/features/wmt2015_wqe_baseline/features_train.txt
-y_train: ../data/features/wmt2015_wqe_baseline/labels_train.txt
-x_test: ../data/features/wmt2015_wqe_baseline/features_test.txt
-y_test: ../data/features/wmt2015_wqe_baseline/labels_test.txt
+x_train: data/features/wmt2012_qe_baseline/training.qe.baseline.tsv 
+y_train: data/features/wmt2012_qe_baseline/training.effort
+x_test: data/features/wmt2012_qe_baseline/test.qe.baseline.tsv
+y_test: data/features/wmt2012_qe_baseline/test.effort
+
 separator: "\t"
 
 # Learning algorithm configurations:
