adding project report

--- a/learning/config/svr.cfg
+++ b/learning/config/svr.cfg
@@ -22,7 +22,7 @@ learning:
     method: SVR
     optimize:
         #kernel: [linear, rbf, poly]
-        kernel: [rbf]
+        kernel: [linear]
         # begin, end, number of samples to generate
         C: [1, 10, 2]
         gamma: [0.0001, 0.01, 2]
